# aamrs

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  package-lock.json  tailwind.config.js
public/: tailwind.css
src/: main.rs
src/files/: config.rs  folder_contents.rs  folders.rs  mod.rs  paths.rs  projects.rs  resource_files.rs  setup.rs  state.rs
src/resources/: aamrs_config.rs  aamrs_state.rs  environment.rs  mod.rs  project.rs  project_state.rs  request.rs  request_example.rs  response.rs
src/test_utils/: mod.rs  temp_files.rs
src/traits/: file_name.rs  file_path.rs  mod.rs
src/types/: aamrs_state.rs  environment.rs  mod.rs  request.rs  request_example.rs
src/ui/: mod.rs
src/ui/components/: mod.rs
src/ui/components/modal/: mod.rs  modal_main.rs
src/ui/components/projects/: dir_contents.rs  mod.rs  project.rs  project_contents.rs  projects.rs  projects_list.rs
src/ui/layouts/: home_layout.rs  mod.rs  sidebar.rs
src/ui/native/: file_dialog.rs  mod.rs
src/ui/pages/: mod.rs  new_project.rs
src/ui/pages/home/: home.rs  home_page.rs  mod.rs
