[package]
name = "aamrs"
version = "0.1.0"
authors = ["Abhay Raj Singh <abhayonlyone@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5.1", features = ["desktop", "router"] }

# Debug
log = "0.4.19"
dioxus-logger = "0.4.1"
serde = "1.0.197"
serde_json = "1.0.115"
tempfile = "3.10.1"
rfd = "0.14.1"
dioxus-free-icons = { version = "0.8.3", features = ["ionicons", "feather"] }
